Fix breadcrumbs glued to the userbar (on mobile)

--- a/packages/@uppy/provider-views/src/style.scss
+++ b/packages/@uppy/provider-views/src/style.scss
@@ -44,7 +44,6 @@
 }
 
 .uppy-Provider-breadcrumbs {
-  display: inline-block;
   flex: 1;
   color: darken($color-gray, 25%);
   font-size: 12px;
